# YredxinSFIO

./: .gitignore  CMakeLists.txt  RCa04424  README.md  YredxinSFIO.licenseheader  YredxinSFIO.sln  YredxinSFIO.vcxproj  YredxinSFIO.vcxproj.filters
UML/: V1.7重构.mdj  V2.0重构_扩展.mdj  V2.1增加Tcp模块.mdj  V2.2新增定时任务模块.mdj  V2.3kernel新增接口.mdj
YSFIO/: AYSFIOHandle.cpp  AYSFIOHandle.h  CMakeLists.txt  IYSFIOChannel.cpp  IYSFIOChannel.h  IYSFIOHandle.cpp  IYSFIOHandle.h  IYSFIOProtocol.cpp  IYSFIOProtocol.h  IYSFIORole.cpp  IYSFIORole.h  README.md  YSFIOKernel.cpp  YSFIOKernel.h  YSFIOStreamMsg.cpp  YSFIOStreamMsg.h  YSFIOTcpModule.cpp  YSFIOTcpModule.h  YSFIOTimeoutModule.cpp  YSFIOTimeoutModule.h  util.h
example/: SimpleExampleEcho.cpp  SimpleExampleRole.cpp  SimpleExampleTcp.cpp  SimpleExampleTimerTask.cpp
test/: TestIn.cpp  TestIn.h  TestOut.cpp  TestOut.h  main.cpp
